# moondream-rs

./: .gitignore  Cargo.toml  README.md
files/: config.json  initial_kv_cache.npy  tokenizer.json
scripts/: download.py
src/: build.rs  error.rs  lib.rs  main.rs
src/moondream/: config.rs  engine.rs  mod.rs  moondream.rs  moondream2.rs  preprocess.rs  types.rs  util.rs
src/triton/: client.rs  config.rs  mod.rs  types.rs
src/triton/grpc/: grpc.health.v1.rs  grpc_service.proto  grpc_service.rs  health.proto  inference.rs  mod.rs  model_config.proto
src/utils/: array.rs  bytes.rs  mod.rs
